--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "private": true,
+  "private": false,
+  "version": "3.1.0",
   "name": "react-pdf-highlighter-monorepo",
   "scripts": {
     "postinstall": "npm run bootstrap",
