--- a/packages/react-pdf-highlighter/package.json
+++ b/packages/react-pdf-highlighter/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "react-pdf-highlighter",
-  "version": "3.1.0",
+  "name": "@maneeshd/react-pdf-highlighter",
+  "version": "3.1.2",
   "description": "Set of React components for PDF annotation",
   "main": "build/index.js",
+  "private": false,
   "scripts": {
     "start": "npm run watch",
     "build": "NODE_ENV=production babel src -d build --copy-files",
@@ -43,10 +44,10 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/agentcooper/react-pdf-highlighter.git"
+    "url": "git+https://github.com/maneeshd/react-pdf-highlighter.git"
   },
   "bugs": {
-    "url": "https://github.com/agentcooper/react-pdf-highlighter/issues"
+    "url": "https://github.com/maneeshd/react-pdf-highlighter/issues"
   },
-  "homepage": "https://github.com/agentcooper/react-pdf-highlighter#readme"
+  "homepage": "https://github.com/maneeshd/react-pdf-highlighter#readme"
 }
